Removed unused data sources and added comments

--- a/project.ipynb
+++ b/project.ipynb
@@ -44,33 +44,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'import json\\n\\ndb = client[\\'player_valuations\\']\\ncollection = db[\\'players\\']\\nplayer = collection.find_one({\\'player_id\\': 10})\\n\\n# Print the result\\nif player:\\n    print(\"Player found:\", json.dumps(player, indent=4, default=str))\\nelse:\\n    print(\"No player found with player_id\", 65)'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"import json\n",
-    "\n",
-    "db = client['player_valuations']\n",
-    "collection = db['players']\n",
-    "player = collection.find_one({'player_id': 10})\n",
-    "\n",
-    "# Print the result\n",
-    "if player:\n",
-    "    print(\"Player found:\", json.dumps(player, indent=4, default=str))\n",
-    "else:\n",
-    "    print(\"No player found with player_id\", 65)\"\"\""
+    "# Extracting the data from the mongo database into a pandas dataframe"
    ]
   },
   {
@@ -88,6 +65,13 @@
     "\n",
     "df = pd.DataFrame(list(res))\n",
     "df.drop(\"_id\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining the schema for the pySpark dataframe"
    ]
   },
   {
@@ -136,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Starting a spark session and extracting the raw data into dataframes"
+    "# Starting a spark session and extracting the raw data into spark dataframes"
    ]
   },
   {
@@ -169,14 +153,18 @@
    "source": [
     "from pyspark.sql.functions import when\n",
     "\n",
+    "# Dropping some columns that we don't need\n",
     "player_valuation_df = player_valuation_df.drop(*[\"image_url\", \"url\", \"name\", \"player_code\"])\n",
+    "\n",
+    "# Fixing data for retaired players or players that are no longer tracked\n",
     "player_valuation_df = player_valuation_df.withColumns({\n",
     "    \"current_club_id\": when(player_valuation_df[\"last_season\"] != 2023, -1).otherwise(player_valuation_df[\"current_club_id\"]),\n",
     "    \"current_club_domestic_competition_id\": when(player_valuation_df[\"last_season\"] != 2023, \"-1\").otherwise(player_valuation_df[\"current_club_domestic_competition_id\"]),\n",
-    "    \"current_club_name\": when(player_valuation_df[\"last_season\"] != 2023, \"Retired\").otherwise(player_valuation_df[\"current_club_name\"]),\n",
+    "    \"current_club_name\": when(player_valuation_df[\"last_season\"] != 2023, \"Retired or no longer tracked\").otherwise(player_valuation_df[\"current_club_name\"]),\n",
     "    \"market_value_in_eur\": when(player_valuation_df[\"last_season\"] != 2023, 0).otherwise(player_valuation_df[\"market_value_in_eur\"])\n",
     "})\n",
     "\n",
+    "# Dropping some columns that we don't need\n",
     "games_df = games_df.drop(*[\"url\", \"aggregate\", \"home_club_formation\", \"away_club_formation\"])"
    ]
   },
@@ -210,19 +198,28 @@
    "source": [
     "from pyspark.sql.functions import explode, col, expr\n",
     "\n",
+    "# Get player values\n",
     "valuations = player_valuation_df.select(\"valuations\")\n",
+    "\n",
+    "# Flatten the valuations array\n",
     "flattened_valuations = valuations.select(explode(\"valuations\").alias(\"valuation\"))\n",
+    "\n",
+    "# Get the player values in 2023\n",
     "valuations2023 = flattened_valuations.filter(\"substring(valuation.date, 1, 4) = '2023'\")\n",
-    "max_market_value_players_2023 = valuations2023\\\n",
+    "\n",
+    "# Get the market values of all players in 2023 and sort them descending\n",
+    "players_market_values_2023 = valuations2023\\\n",
     "    .select(\"valuation.*\").groupBy(\"player_id\").max(\"market_value_in_eur\")\\\n",
     "    .withColumnRenamed(\"max(market_value_in_eur)\", \"market_value_in_eur\")\\\n",
     "    .join(player_valuation_df.select(\"player_id\", \"first_name\", \"last_name\"), on=\"player_id\", how=\"inner\")\\\n",
     "    .orderBy('market_value_in_eur', ascending=False)\\\n",
     "    .select(\"first_name\", \"last_name\", \"market_value_in_eur\")\n",
     "\n",
-    "max_value = max_market_value_players_2023.select(\"market_value_in_eur\").first()[\"market_value_in_eur\"]\n",
+    "# Get the max market value\n",
+    "max_value = players_market_values_2023.select(\"market_value_in_eur\").first()[\"market_value_in_eur\"]\n",
     "\n",
-    "max_value_players = max_market_value_players_2023.filter(col(\"market_value_in_eur\") == max_value)\n",
+    "# Get the players with the max market value\n",
+    "max_value_players = players_market_values_2023.filter(col(\"market_value_in_eur\") == max_value)\n",
     "\n",
     "max_value_players.show()"
    ]
@@ -413,7 +410,7 @@
     "\n",
     "player_goals = player_valuation_df_alias\\\n",
     "    .join(game_events_df_alias, on=\"player_id\", how=\"inner\")\\\n",
-    "    .filter((F.col(\"ged.type\") == \"Goals\") & (F.col(\"pvd.last_season\") == 2023))\\\n",
+    "    .filter((F.col(\"ged.type\") == \"Goals\"))\\\n",
     "    .groupBy(\"pvd.player_id\", \"first_name\", \"last_name\")\\\n",
     "    .agg(F.sum(F.when(F.col(\"ged.type\") == \"Goals\", 1).otherwise(0)).alias(\"total_goals\"))\\\n",
     "    .orderBy(\"total_goals\", ascending=False)\\\n",
