Removed unused data sources and added comments

--- a/project.ipynb
+++ b/project.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The data for this project is from https://www.kaggle.com/datasets/davidcariboo/player-scores?select=players.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialize MongoDB client\n",
     "See README.md for setup instructions."
    ]
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,22 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+-------------+-----------+\n",
-      "|    first_name|    last_name|total_goals|\n",
-      "+--------------+-------------+-----------+\n",
-      "|        Robert|  Lewandowski|        450|\n",
-      "|         Harry|         Kane|        297|\n",
-      "|Pierre-Emerick|   Aubameyang|        278|\n",
-      "|           NaN|Mohamed Salah|        256|\n",
-      "|        Romelu|       Lukaku|        250|\n",
-      "+--------------+-------------+-----------+\n",
+      "+----------+-----------------+-----------+\n",
+      "|first_name|        last_name|total_goals|\n",
+      "+----------+-----------------+-----------+\n",
+      "|    Robert|      Lewandowski|        450|\n",
+      "|    Lionel|            Messi|        443|\n",
+      "|       NaN|Cristiano Ronaldo|        433|\n",
+      "|     Harry|             Kane|        297|\n",
+      "|      Luis|           Suárez|        283|\n",
+      "+----------+-----------------+-----------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -429,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,23 +452,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'client.close()\\nss.stop()'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"client.close()\n",
-    "ss.stop()\"\"\""
+    "client.close()\n",
+    "ss.stop()"
    ]
   }
  ],
