Made requirements.txt

--- a/project.ipynb
+++ b/project.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.5 ('football_data_transformer': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +481,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "88279d2366fe020547cde40dd65aa0e3aa662a6ec1f3ca12d88834876c85e1a6"
+    "hash": "281408085a088bc98495d693beaf1360112474c5a0f10b39bfffe060c7c02a1f"
    }
   }
  },
