Added requirements.txt file

--- a/project.ipynb
+++ b/project.ipynb
@@ -463,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.5 ('football_data_transformer': venv)",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +481,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "281408085a088bc98495d693beaf1360112474c5a0f10b39bfffe060c7c02a1f"
+    "hash": "88279d2366fe020547cde40dd65aa0e3aa662a6ec1f3ca12d88834876c85e1a6"
    }
   }
  },
