Moved imports on top

--- a/project.ipynb
+++ b/project.ipynb
@@ -11,13 +11,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Needed imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import warnings\n",
+    "import pandas as pd\n",
+    "from urllib.parse import quote_plus\n",
+    "from pymongo.mongo_client import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, ArrayType, MapType, StringType, IntegerType, DoubleType\n",
+    "from pyspark.sql.functions import when, explode, col, expr, sum as _sum, countDistinct\n",
+    "\n",
+    "# Silence annoying future warning\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialize MongoDB client\n",
     "See README.md for setup instructions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +56,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "from urllib.parse import quote_plus\n",
-    "from pymongo.mongo_client import MongoClient\n",
-    "from pymongo.server_api import ServerApi\n",
-    "import warnings\n",
-    "\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
-    "\n",
     "username = quote_plus('common')\n",
     "password = quote_plus(os.environ.get('MONGODB_PASSWORD'))\n",
     "uri = f\"mongodb+srv://{username}:{password}@playervaluations.v7jevdf.mongodb.net/?retryWrites=true&w=majority\"\n",
@@ -59,13 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pyspark.sql.types import StructType, StructField, ArrayType, MapType, StringType, IntegerType, DoubleType\n",
-    "\n",
     "db = client['player_valuations']\n",
     "collection = db['players']\n",
     "res = collection.find()\n",
@@ -78,12 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining the schema for the pySpark dataframe"
+    "# Defining the schema for the player valuation pyspark dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "\n",
     "ss = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
     "\n",
     "player_valuation_df=ss.createDataFrame(df, schema = schema)\n",
@@ -154,12 +168,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import when\n",
-    "\n",
     "# Dropping some columns that we don't need\n",
     "player_valuation_df = player_valuation_df.drop(*[\"image_url\", \"url\", \"name\", \"player_code\"])\n",
     "\n",
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +215,6 @@
     }
    ],
    "source": [
-    "from pyspark.sql.functions import explode, col, expr\n",
-    "\n",
     "# Get player values\n",
     "valuations = player_valuation_df.select(\"valuations\")\n",
     "\n",
@@ -240,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +271,6 @@
     }
    ],
    "source": [
-    "from pyspark.sql.functions import sum as _sum\n",
-    "\n",
     "# Extract 2023 valuations and aggregate market values by player and club.\n",
     "player_club_valuations_2023 = valuations2023\\\n",
     "    .select(\"valuation.*\")\\\n",
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +318,6 @@
     }
    ],
    "source": [
-    "from pyspark.sql.functions import countDistinct\n",
-    "\n",
     "max_valuations2023 = valuations2023\\\n",
     "    .select(\"valuation.player_id\", \"valuation.market_value_in_eur\", \"valuation.current_club_id\")\\\n",
     "    .groupBy(\"player_id\").agg({\"market_value_in_eur\": \"max\", \"current_club_id\": \"first\"})\\\n",
@@ -347,22 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
-      "|first_name|last_name|home_club_name     |away_club_name|date      |description                   |minute|\n",
-      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
-      "|Jonathan  |de Guzmán|Queens Park Rangers|Swansea City  |2012-08-18|1. Yellow card  , Foul        |41    |\n",
-      "|Dean      |Whitehead|Reading FC         |Stoke City    |2012-08-18|Second yellow  , Foul         |88    |\n",
-      "|Ryan      |Shawcross|Reading FC         |Stoke City    |2012-08-18|1. Yellow card  , Foul        |90    |\n",
-      "|Samba     |Diakité  |Queens Park Rangers|Swansea City  |2012-08-18|1. Yellow card  , Foul        |55    |\n",
-      "|Asmir     |Begovic  |Reading FC         |Stoke City    |2012-08-18|1. Yellow card  , Time wasting|90    |\n",
-      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
+      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
+      "|first_name  |last_name|home_club_name                |away_club_name                 |date      |description                   |minute|\n",
+      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
+      "|Jake        |Livermore|Newcastle United Football Club|Tottenham Hotspur Football Club|2012-08-18|1. Yellow card  , Foul        |17    |\n",
+      "|Daniel      |Agger    |West Bromwich Albion          |Liverpool Football Club        |2012-08-18|Red card  , Professional foul |58    |\n",
+      "|Marc-Antoine|Fortuné  |West Bromwich Albion          |Liverpool Football Club        |2012-08-18|1. Yellow card  , Foul        |75    |\n",
+      "|Asmir       |Begovic  |Reading FC                    |Stoke City                     |2012-08-18|1. Yellow card  , Time wasting|90    |\n",
+      "|Dean        |Whitehead|Reading FC                    |Stoke City                     |2012-08-18|Second yellow  , Foul         |88    |\n",
+      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -387,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -409,17 +415,15 @@
     }
    ],
    "source": [
-    "from pyspark.sql import functions as F\n",
-    "\n",
     "# Provide aliases to the DataFrames\n",
     "player_valuation_df_alias = player_valuation_df.alias(\"pvd\")\n",
     "game_events_df_alias = game_events_df.alias(\"ged\")\n",
     "\n",
     "player_goals = player_valuation_df_alias\\\n",
     "    .join(game_events_df_alias, on=\"player_id\", how=\"inner\")\\\n",
-    "    .filter((F.col(\"ged.type\") == \"Goals\"))\\\n",
+    "    .filter((col(\"ged.type\") == \"Goals\"))\\\n",
     "    .groupBy(\"pvd.player_id\", \"first_name\", \"last_name\")\\\n",
-    "    .agg(F.sum(F.when(F.col(\"ged.type\") == \"Goals\", 1).otherwise(0)).alias(\"total_goals\"))\\\n",
+    "    .agg(_sum(when(col(\"ged.type\") == \"Goals\", 1).otherwise(0)).alias(\"total_goals\"))\\\n",
     "    .orderBy(\"total_goals\", ascending=False)\\\n",
     "    .select(\"pvd.first_name\", \"pvd.last_name\", \"total_goals\")\n",
     "\n",
@@ -436,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
