--- a/project.ipynb
+++ b/project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of clubs holding the top 1% players:  38\n"
+      "Number of clubs holding the top 1% players:  39\n"
      ]
     }
    ],
@@ -348,27 +348,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EPL bookings exaample"
+    "# EPL bookings example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
-      "|first_name  |last_name|home_club_name                |away_club_name                 |date      |description                   |minute|\n",
-      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
-      "|Jake        |Livermore|Newcastle United Football Club|Tottenham Hotspur Football Club|2012-08-18|1. Yellow card  , Foul        |17    |\n",
-      "|Daniel      |Agger    |West Bromwich Albion          |Liverpool Football Club        |2012-08-18|Red card  , Professional foul |58    |\n",
-      "|Marc-Antoine|Fortuné  |West Bromwich Albion          |Liverpool Football Club        |2012-08-18|1. Yellow card  , Foul        |75    |\n",
-      "|Asmir       |Begovic  |Reading FC                    |Stoke City                     |2012-08-18|1. Yellow card  , Time wasting|90    |\n",
-      "|Dean        |Whitehead|Reading FC                    |Stoke City                     |2012-08-18|Second yellow  , Foul         |88    |\n",
-      "+------------+---------+------------------------------+-------------------------------+----------+------------------------------+------+\n",
+      "+----------+---------+--------------------+-----------------------+----------+------------------------------+------+\n",
+      "|first_name|last_name|home_club_name      |away_club_name         |date      |description                   |minute|\n",
+      "+----------+---------+--------------------+-----------------------+----------+------------------------------+------+\n",
+      "|Dean      |Whitehead|Reading FC          |Stoke City             |2012-08-18|Yellow card  , Foul           |18    |\n",
+      "|Jonathan  |de Guzmán|Queens Park Rangers |Swansea City           |2012-08-18|1. Yellow card  , Foul        |41    |\n",
+      "|Dean      |Whitehead|Reading FC          |Stoke City             |2012-08-18|Second yellow  , Foul         |88    |\n",
+      "|Asmir     |Begovic  |Reading FC          |Stoke City             |2012-08-18|1. Yellow card  , Time wasting|90    |\n",
+      "|Daniel    |Agger    |West Bromwich Albion|Liverpool Football Club|2012-08-18|Red card  , Professional foul |58    |\n",
+      "+----------+---------+--------------------+-----------------------+----------+------------------------------+------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -415,17 +415,14 @@
     }
    ],
    "source": [
-    "# Provide aliases to the DataFrames\n",
-    "player_valuation_df_alias = player_valuation_df.alias(\"pvd\")\n",
-    "game_events_df_alias = game_events_df.alias(\"ged\")\n",
     "\n",
-    "player_goals = player_valuation_df_alias\\\n",
-    "    .join(game_events_df_alias, on=\"player_id\", how=\"inner\")\\\n",
-    "    .filter((col(\"ged.type\") == \"Goals\"))\\\n",
-    "    .groupBy(\"pvd.player_id\", \"first_name\", \"last_name\")\\\n",
-    "    .agg(_sum(when(col(\"ged.type\") == \"Goals\", 1).otherwise(0)).alias(\"total_goals\"))\\\n",
+    "player_goals = player_valuation_df\\\n",
+    "    .join(game_events_df, on=\"player_id\", how=\"inner\")\\\n",
+    "    .filter((col(\"type\") == \"Goals\"))\\\n",
+    "    .groupBy(\"player_id\", \"first_name\", \"last_name\")\\\n",
+    "    .agg(_sum(when(col(\"type\") == \"Goals\", 1).otherwise(0)).alias(\"total_goals\"))\\\n",
     "    .orderBy(\"total_goals\", ascending=False)\\\n",
-    "    .select(\"pvd.first_name\", \"pvd.last_name\", \"total_goals\")\n",
+    "    .select(\"first_name\", \"last_name\", \"total_goals\")\n",
     "\n",
     "\n",
     "player_goals.show(5)"
