--- a/project.ipynb
+++ b/project.ipynb
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The goals scored by each player, that still plays since the data is being collected"
+    "# The goals scored by each player, since the data is being collected"
    ]
   },
   {
