Add authors to notebook

--- a/project.ipynb
+++ b/project.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Authors\n",
+    "\n",
+    "- Nikolay Shivarov\n",
+    "- Stoyan Nikolov\n",
+    "- Teodor Grozdanov"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The data for this project is from https://www.kaggle.com/datasets/davidcariboo/player-scores?select=players.csv"
    ]
   },
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
